--- a/_data/people.yml
+++ b/_data/people.yml
@@ -2,7 +2,7 @@ mcyang:
     display_name: "Prof. Ming-Chang Yang"
     webpage: "http://www.cse.cuhk.edu.hk/~mcyang/"
     role: faculty
-    image: /img/people/mcyang.jpg
+    image: /img/people/mcyang.png
     bio: Principal Investigator
 
 yhliang:
