--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,8 @@ roles:
     name: Faculty
   - key: grad
     name: Graduate Students
+  - key: ra
+    name: Research Assistants
   - key: alum
     name: Alumni
 
