--- a/_data/people.yml
+++ b/_data/people.yml
@@ -53,88 +53,19 @@ chjin:
     role: grad
     bio: MPhil since 2020
 
-alum-a:
-    display_name: "Alum A"
+yfhou:
+    display_name: "Yifan Hou"
     role: alum
-    bio: "Ph.D., 2013. Now at Microsoft Research."
+    bio: "MPhil since 2018. Latest Known: PhD at ETH Zurich."
 
-alum-b:
-    display_name: "Alum B With Way Longer Name"
+jliu:
+    display_name: "Jie Liu"
     role: alum
+    bio: "MPhil since 2018. Latest Known: PhD at University of Michigan."
 
-alum-c:
-    display_name: "Alum C"
+zzhong:
+    display_name: "Zheng Zhong"
     role: alum
-    webpage: "https://www.google.com"
+    bio: "MPhil since 2018. Latest Known: PhD at Purdue University."
 
-alum-d:
-    display_name: "Alum D"
-    role: alum
 
-alum-e:
-    display_name: "Alum E"
-    role: alum
-
-alum-f:
-    display_name: "Alum F"
-    role: alum
-
-alum-g:
-    display_name: "Alum G"
-    role: alum
-
-alum-h:
-    display_name: "Alum H"
-    role: alum
-
-alum-i:
-    display_name: "Alum I"
-    role: alum
-
-collab-a:
-    display_name: "Collaborator A"
-    role: collab
-
-collab-b:
-    display_name: "Collaborator B With Long Name"
-    role: collab
-
-collab-c:
-    display_name: "Collaborator C"
-    role: collab
-
-collab-d:
-    display_name: "Collaborator D"
-    role: collab
-
-collab-e:
-    display_name: "Collaborator E"
-    role: collab
-
-ugrad-a:
-    display_name: "Ugrad A"
-    role: ugrad
-
-ugrad-b:
-    display_name: "Ugrad Student B With Long Name"
-    role: ugrad
-
-ugrad-c:
-    display_name: "Ugrad C"
-    role: ugrad
-
-ugrad-d:
-    display_name: "Ugrad D"
-    role: ugrad
-
-ugrad-e:
-    display_name: "Ugrad E"
-    role: ugrad
-
-ugrad-alum-a:
-    display_name: "Past Ugrad A"
-    role: ugrad-alum
-
-ugrad-alum-b:
-    display_name: "Past Ugrad Student B With Long Name"
-    role: ugrad-alum
