--- a/_data/people.yml
+++ b/_data/people.yml
@@ -56,16 +56,16 @@ chjin:
 yfhou:
     display_name: "Yifan Hou"
     role: alum
-    bio: "MPhil since 2018. Latest Known: PhD at ETH Zurich."
+    bio: "MPhil (2018-2020). Latest Known: PhD at ETH Zurich."
 
 jliu:
     display_name: "Jie Liu"
     role: alum
-    bio: "MPhil since 2018. Latest Known: PhD at University of Michigan."
+    bio: "MPhil (2018-2020). Latest Known: PhD at University of Michigan."
 
 zzhong:
     display_name: "Zheng Zhong"
     role: alum
-    bio: "MPhil since 2018. Latest Known: PhD at Purdue University."
+    bio: "MPhil (2018-2020). Latest Known: PhD at Purdue University."
 
 
