--- a/_data/people.yml
+++ b/_data/people.yml
@@ -68,4 +68,34 @@ zzhong:
     role: alum
     bio: "MPhil (2018-2020). First Job: PhD at Purdue University."
 
+    
+lychow:
+    display_name: "Lok Yin CHOW"
+    role: ra
+    bio: "Student Helper (2020). First Job: PhD at The Chinese University of Hong Kong."
+    
+tfchung:
+    display_name: "Tin Fan Chung"
+    role: ra
+    bio: "Student Helper (2020). First Job: Postdoc at Purdue University."
 
+cwang:
+    display_name: "Chao Wang"
+    role: ra
+    bio: "Research Assistant (2020). First Job: PhD at The Chinese University of Hong Kong."
+
+
+jylin:
+    display_name: "Jiaying Lin"
+    role: ra
+    bio: "Research Assistant (2019). First Job: Internship at Microsoft Research Asia."
+
+hesu:
+    display_name: "Hsin-En SU"
+    role: ra
+    bio: "Summer Internship (2019). First Job: Undergraduate Study at National Chiao-Tung University."
+
+shchen:
+    display_name: "Shuo-Han Chen"
+    role: ra
+    bio: "Postdoc (2018). First Job: Postdoc at Purdue University."
