--- a/_data/people.yml
+++ b/_data/people.yml
@@ -91,7 +91,7 @@ jylin:
     bio: "Research Assistant (2019). First Job: Internship at Microsoft Research Asia."
 
 hesu:
-    display_name: "Hsin-En SU"
+    display_name: "Hsin-En Su"
     role: ra
     bio: "Summer Internship (2019). First Job: Undergraduate Study at National Chiao-Tung University."
 
